--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
-version: '2'
+version: "3.8"
+
+x-adminer-db-volumes:
+  &acj-adminer-volumes
+  - ./adminer.css:/var/www/html/adminer.css
+  - ./plugins:/var/www/html/plugins/
+  - ./server_list.json:/var/www/html/server_list.json
 
 services:
   adminer-web:
-    build: .
+    image: adminer:4.8.1
+    volumes:
+      *acj-adminer-volumes
     environment:
       - VIRTUAL_HOST=adminer.local
+      - VIRTUAL_PORT=8080
+      - ADMINER_PLUGINS=login-servers tables-filter edit-foreign
     network_mode: "bridge"
     restart: always
-    volumes:
-      - .:/var/www/
+
